--- a/app/templates/app-recipes/category.tpl.html
+++ b/app/templates/app-recipes/category.tpl.html
@@ -1,9 +1,19 @@
-<div class="row align-center">
-  <div class="recipe small-10 medium-4 large-3 columns" ng-repeat="recipe in vm.catRecipes">
-    <img class="thumbnail" ng-if="recipe.source_image_url" ng-src="{{ recipe.source_image_url }}" height="100" width="100">
-    <img class="thumbnail" ng-if="!recipe.source_image_url" src="http://placehold.it/100x100">
-    <p class="title">
-      <a href="#/recipes/{{ recipe.id }}">{{ recipe.name }}</a>
-    </p>
+<div class="dashboard">
+
+  <div class="row align-center">
+    <div class="recipe small-10 medium-4 large-3 columns" style="background-image: url( {{ recipe.source_image_url }} )" ng-repeat="recipe in vm.catRecipes">
+      <p class="title">
+        <a href="#/recipes/{{ recipe.id }}">{{ recipe.name }}</a>
+      </p>
+    </div>
   </div>
+
 </div>
+
+<footer class"categories">
+  <ul>
+    <li ng-repeat="category in vm.categories"> 
+    <a href="#/category/{{ category.id }}">{{ category.name }}</a>
+    </li>
+  </ul>
+</footer>
