--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,14 +3,14 @@
 @include foundation-everything;
 @include foundation-flex-grid;
 
-
-$cellBorder: 2px solid white;
-$cellBorderRadius: 9px;
-
 $cellBackground: #D2FBFE;
 $dashboardColor: #202020;
+$headingBackground: #367459;
 $mainBackgroundColor: #FAFAF5;
 $themeColor: #44A19E;
+
+$cellBorder: 2px solid $dashboardColor;
+$cellBorderRadius: 9px;
 
 $mainImage: url('../photos/GYEIFHUP3O.jpg');
 
@@ -100,6 +100,7 @@ body {
 }
 
 div .singleRecipe .ng-scope{
+  border-radius: 0px 6px;
   color: $themeColor;
   border-top: 1px solid $themeColor;
   margin-bottom: 0px;
@@ -107,11 +108,12 @@ div .singleRecipe .ng-scope{
   overflow: hidden;
   width: 100%;
   .heading {
-    background: green;
+    background: $headingBackground;
     color: white;
     width: 100%;
     h4 {
       margin-bottom: 0px;
+      padding: 15px;
     }
   }
   p {
@@ -142,11 +144,13 @@ div #recipe.row{
     width: auto;
     mrgin: 10px;
     border: $cellBorder;
+    border-radius: $cellBorderRadius;
     padding: 0px;
   }
   .directions {
     background: $cellBackground;
     border: $cellBorder;
+    border-radius: $cellBorderRadius;     
     padding: 0px;
   }
 }
