--- a/app/templates/app-layout/layout.tpl.html
+++ b/app/templates/app-layout/layout.tpl.html
@@ -1,19 +1,21 @@
 <nav class="top-bar" data-topbar role="navigation">
   <section class="title-area">
-      <a id="logo" href="#/">Flour Power</a>
+      <a id="logo" href="#/">FlourPower</a>
   </section>
 
-  <div class="input-group search-bar">
-    <form ng-submit="search(query)">
-      <input type="text" ng-model="query" placeholder="Search For Recipe Here"/>
+  <section id="right">
+    <a id="create" href="#/add">Add Recipe</a> 
+    <a href="#/dashboard">Dashboard</a> 
+    <a href="#/">Logout</a>
+  </section>
+
+  <div id="search">
+    <form id="search-bar" ng-submit="search(query)">
+      <input id="input" type="text" ng-model="query" placeholder="Search For Recipe Here"/>
     </form>
   </div>
   
-  <section class="right">
-      <a href="#/dashboard">Dashboard</a> |
-      <a href="#/add">Add Recipe</a> |
-      <a href="#/">Logout</a>
-  </section>
+
 </nav>
 
 <section class="container" ui-view></section>
