--- a/sass/main.scss
+++ b/sass/main.scss
@@ -38,9 +38,6 @@ li {
     color: $lightAccent;
   }
 
-  section {
-    display: inline-block;
-  }
   .title-area{
     clear: left;
     float: left;
@@ -62,7 +59,7 @@ li {
   div #search {
     background: #82D8D5;
     display: imline-block;
-    margin-left: 1em;
+    // margin-left: 2em;
     width: 300px;
     form #serch-bar .ng-pristine .ng-untouched .ng-valid {
       // display: inline-block;
@@ -113,20 +110,16 @@ div .page-title {
     margin: auto;
     padding: 10px;
     .recipe {
-      // opacity: 1;
       margin: 10px;
       border: $cellBorder;
       border-radius: $cellBorderRadius;
       height: 10em;
-
-      .title {
-        text-align: center;
-      }
-      .thumbnail{
-        width: 100%;
-        margin-top: 10px;
-        align: center;
-      }
+    }
+  }
+  .title {
+    text-align: center;
+    a {
+      color: $lightAccent;
     }
   }
 }
@@ -171,10 +164,10 @@ div .singleRecipe .ng-scope{
   
   #page p {
     color: white;
-    border: 2px solid $highlight;
+    border: 4px solid $highlight;
     margin: 20px auto;
     padding: 17px;
-    width: 70%;
+    width: 85%;
   }
 
 div #recipe.row{
@@ -197,8 +190,12 @@ div #recipe.row{
   margin: auto;
 }
 
-// .categories {
-//   a #category .ng-binding .column{
-//     color: $lightAccent;
-//   }
-// }
+#category {
+  border: 2px solid $lightAccent;
+  border-radius: 9px;
+  padding: 10px;
+  color: $lightAccent;
+  font-size: 12px;
+  // width: 0.25em;
+
+}
