--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3313,15 +3313,23 @@ table.hover tr:nth-of-type(even):hover {
 
 body {
   font-family: 'Raleway', sans-serif;
+  font-weight: 200;
   background: #202020; }
 
 li {
   list-style: none; }
 
+p {
+  padding: 17px 10px 17px 0; }
+
+a {
+  color: #86D3CE; }
+
 .top-bar {
   padding: 0.5rem;
   background: #4DB3AB;
-  padding-top: 1.5em; }
+  padding: 0 0.5em;
+  position: relative; }
   .top-bar::before, .top-bar::after {
     content: ' ';
     display: table; }
@@ -3332,28 +3340,47 @@ li {
   .top-bar input {
     width: 200px;
     margin-right: 1rem; }
-  .top-bar a {
-    color: #86D3CE; }
   .top-bar .title-area {
-    clear: left;
+    display: block;
     float: left;
     font-family: 'Cookie', cursive;
     font-size: 50px; }
+  .top-bar #logo {
+    color: white; }
   .top-bar #right {
-    clear: right;
-    float: right; }
+    float: right;
+    margin-top: 1.4em; }
     .top-bar #right a {
-      margin: 0.5em; }
+      color: white;
+      font-size: 1.4em;
+      margin: 0.7em 1em; }
     .top-bar #right #create {
-      border: 2px solid #86D3CE;
+      border: 1px solid white;
       border-radius: 9px;
       padding: 10px; }
-  .top-bar div #search {
-    background: #82D8D5;
-    display: imline-block;
-    width: 300px; }
-    .top-bar div #search form #serch-bar .ng-pristine .ng-untouched .ng-valid #input [type='text'] textarea {
-      background: #82D8D5; }
+  .top-bar #search {
+    background: blue;
+    display: inline-block;
+    height: 0;
+    margin: 0 5em;
+    width: 400px; }
+    .top-bar #search form #search-bar {
+      background: orange;
+      display: inline-block; }
+    .top-bar #search input {
+      bottom: 0;
+      border: none;
+      color: #36827C;
+      background: #86D3CE;
+      font-size: 1.6em;
+      width: 100%;
+      height: 2.9em; }
+    .top-bar #search input:focus {
+      color: white; }
+
+.container {
+  display: block;
+  margin: 20px auto; }
 
 .home {
   position: absolute;
@@ -3386,7 +3413,7 @@ div .page-title {
     padding: 17px 10px 17px 0; }
 
 .dashboard .row {
-  margin: auto;
+  margin: 40px auto;
   padding: 10px; }
   .dashboard .row .recipe {
     margin: 10px;
@@ -3430,6 +3457,7 @@ div .singleRecipe .ng-scope {
 #page p {
   color: white;
   border: 4px solid #36827C;
+  font-size: 1.4em;
   margin: 20px auto;
   padding: 17px;
   width: 85%; }
@@ -3694,10 +3722,9 @@ div #recipe.row .directions {
   margin: auto; }
 
 #category {
-  border: 2px solid #86D3CE;
-  border-radius: 9px;
-  padding: 10px;
   color: #86D3CE;
-  font-size: 12px; }
+  font-size: 1.3em;
+  font-weight: 500;
+  padding: 10px; }
 
 /*# sourceMappingURL=main.css.map */
