--- a/app/templates/app-layout/layout.tpl.html
+++ b/app/templates/app-layout/layout.tpl.html
@@ -4,14 +4,14 @@
   </section>
 
   <section id="right">
-    <a id="create" href="#/add">Add Recipe</a> 
+    <a id="create" href="#/add">Create Recipe</a> 
     <a href="#/dashboard">Dashboard</a> 
     <a href="#/">Logout</a>
   </section>
 
   <div id="search">
     <form id="search-bar" ng-submit="search(query)">
-      <input id="input" type="text" ng-model="query" placeholder="Search For Recipe Here"/>
+      <input id="input" type="text" ng-model="query" placeholder="Search For Recipe"/>
     </form>
   </div>
   
