--- a/app/templates/app-user/dashboard.tpl.html
+++ b/app/templates/app-user/dashboard.tpl.html
@@ -5,7 +5,8 @@
 <div class="dashboard">
   
   <div class="row align-center">
-    <div class="recipe small-10 medium-4 large-3 columns" style="background-image: url( {{ recipe.source_image_url }} )" ng-repeat="recipe in vm.recipes">
+    <div class="recipe small-10 medium-4 large-3 columns"  ng-repeat="recipe in vm.recipes" >
+      <img src="{{ recipe.source_image_url }}">
       <p class="title">
         <a href="#/recipes/{{ recipe.id }}">{{ recipe.name }}</a>
       </p>
