--- a/app/templates/app-user/dashboard.tpl.html
+++ b/app/templates/app-user/dashboard.tpl.html
@@ -2,9 +2,35 @@
   <p>Dashboard</p>
 </div>
 
-<div class="dashboard">
-  
-  <div class="row align-center">
+<!-- <div class="dashboard"> --> 
+
+  <ul id="hadiya"  ng-controller="DashboardController as recipes">
+
+    <li ng-repeat="recipe in vm.recipes" ng-if="recipe.source_image_url" >
+      <div class="wrapper">
+        <a href="#/recipes/{{ recipe.id }}">
+          <div class="title">
+            <span>{{ recipe.name }}</span>
+          </div>
+          <div class="picture" ng-style="{'background-image':'url( {{ recipe.source_image_url }} )'}" >
+            <div class="backshade"></div>
+           
+          </div>
+          <!-- <img src="{{ recipe.source_image_url }}"> -->
+
+          
+          
+        </a>
+      </div>
+    </li>
+
+  </ul>
+
+<!-- </div> -->
+
+<!-- <div class="dashboard">
+  <div class="row align-center" ng-controller="DashboardController as recipes">
+
     <div class="recipe small-10 medium-4 large-3 columns"  ng-repeat="recipe in vm.recipes" >
       <img src="{{ recipe.source_image_url }}">
       <p class="title">
@@ -13,7 +39,7 @@
     </div>
   </div>
 
-</div>
+</div> -->
 
 <div class"categories">
   <div class="row align-spaced ">
